--- a/css/404.css
+++ b/css/404.css
@@ -1,7 +1,7 @@
 .version._404 /* version checker */
 {
-	color: #0000E2;
-	background-color: #567DE6;
+	color: #00000B;
+	background-color: #0797C0;
 }
 
 .html
@@ -25,7 +25,7 @@
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 140px 135px 656.2040816326528px;
+	padding: 140px 135px 153.2040816326528px;
 }
 
 #pu3814
