--- a/css/captain-phasma--wallpaper.css
+++ b/css/captain-phasma--wallpaper.css
@@ -1,7 +1,7 @@
 .version.captain_phasma__wallpaper /* version checker */
 {
-	color: #00000B;
-	background-color: #69D1C2;
+	color: #000011;
+	background-color: #E9109C;
 }
 
 .html
@@ -114,10 +114,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
