--- a/css/cinayet-b_ro--badge.css
+++ b/css/cinayet-b_ro--badge.css
@@ -1,7 +1,7 @@
 .version.cinayet_b_ro__badge /* version checker */
 {
-	color: #0000FD;
-	background-color: #4F0107;
+	color: #0000E6;
+	background-color: #C6D8BA;
 }
 
 .html
@@ -114,10 +114,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
