--- a/css/air-force--badge.css
+++ b/css/air-force--badge.css
@@ -1,7 +1,7 @@
 .version.air_force__badge /* version checker */
 {
-	color: #0000ED;
-	background-color: #54AAF5;
+	color: #0000F6;
+	background-color: #DD7348;
 }
 
 .html
@@ -114,10 +114,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
