--- a/css/annual-report--print.css
+++ b/css/annual-report--print.css
@@ -1,7 +1,7 @@
 .version.annual_report__print /* version checker */
 {
-	color: #0000F3;
-	background-color: #63AC37;
+	color: #000014;
+	background-color: #661268;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
