--- a/css/avengers--wallpaper.css
+++ b/css/avengers--wallpaper.css
@@ -1,7 +1,7 @@
 .version.avengers__wallpaper /* version checker */
 {
-	color: #000012;
-	background-color: #D555C9;
+	color: #000008;
+	background-color: #559497;
 }
 
 .html
@@ -113,10 +113,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
