--- a/css/bahar-_enlikleri--poster.css
+++ b/css/bahar-_enlikleri--poster.css
@@ -1,7 +1,7 @@
 .version.bahar__enlikleri__poster /* version checker */
 {
-	color: #000006;
-	background-color: #77D6B5;
+	color: #0000E1;
+	background-color: #7268EA;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
