--- a/css/bul-bizi--poster.css
+++ b/css/bul-bizi--poster.css
@@ -1,7 +1,7 @@
 .version.bul_bizi__poster /* version checker */
 {
-	color: #000019;
-	background-color: #C550F1;
+	color: #0000FE;
+	background-color: #C0EEAE;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
