--- a/css/ekinoks--app-design.css
+++ b/css/ekinoks--app-design.css
@@ -1,7 +1,7 @@
 .version.ekinoks__app_design /* version checker */
 {
-	color: #0000FD;
-	background-color: #3BC680;
+	color: #000010;
+	background-color: #3B1853;
 }
 
 .html
@@ -133,10 +133,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
