--- a/css/hotspot-shield--icon.css
+++ b/css/hotspot-shield--icon.css
@@ -1,7 +1,7 @@
 .version.hotspot_shield__icon /* version checker */
 {
-	color: #0000FF;
-	background-color: #390A5B;
+	color: #00001F;
+	background-color: #365197;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
