--- a/css/light-wood--icon.css
+++ b/css/light-wood--icon.css
@@ -1,7 +1,7 @@
 .version.light_wood__icon /* version checker */
 {
-	color: #0000E1;
-	background-color: #C1CC5E;
+	color: #000001;
+	background-color: #CE9792;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
