--- a/css/mystery.css
+++ b/css/mystery.css
@@ -1,7 +1,7 @@
 .version.mystery /* version checker */
 {
-	color: #0000F0;
-	background-color: #4D8F58;
+	color: #0000EA;
+	background-color: #CD4E06;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
