--- a/css/pangea--magazine.css
+++ b/css/pangea--magazine.css
@@ -1,7 +1,7 @@
 .version.pangea__magazine /* version checker */
 {
-	color: #0000EB;
-	background-color: #91BF74;
+	color: #00000C;
+	background-color: #94012B;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
