--- a/css/pray-hard--wallpaper.css
+++ b/css/pray-hard--wallpaper.css
@@ -1,7 +1,7 @@
 .version.pray_hard__wallpaper /* version checker */
 {
-	color: #0000EE;
-	background-color: #237150;
+	color: #0000F4;
+	background-color: #A3B00E;
 }
 
 .html
@@ -114,10 +114,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
