--- a/css/quorra--wallpaper-set.css
+++ b/css/quorra--wallpaper-set.css
@@ -1,7 +1,7 @@
 .version.quorra__wallpaper_set /* version checker */
 {
-	color: #00000F;
-	background-color: #EAC43A;
+	color: #0000FE;
+	background-color: #41E80E;
 }
 
 .html
@@ -114,10 +114,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
