--- a/css/samer--logo.css
+++ b/css/samer--logo.css
@@ -1,7 +1,7 @@
 .version.samer__logo /* version checker */
 {
-	color: #0000FE;
-	background-color: #6BB609;
+	color: #0000E5;
+	background-color: #E26FB4;
 }
 
 .html
@@ -114,10 +114,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
