--- a/css/sins--wallpaper.css
+++ b/css/sins--wallpaper.css
@@ -1,7 +1,7 @@
 .version.sins__wallpaper /* version checker */
 {
-	color: #0000F3;
-	background-color: #767554;
+	color: #000011;
+	background-color: #7B9CDD;
 }
 
 .html
@@ -114,10 +114,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
