--- a/css/smaug--typography.css
+++ b/css/smaug--typography.css
@@ -1,7 +1,7 @@
 .version.smaug__typography /* version checker */
 {
-	color: #0000FC;
-	background-color: #4C0911;
+	color: #0000E7;
+	background-color: #B79C65;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
