--- a/css/steel-steam--icon.css
+++ b/css/steel-steam--icon.css
@@ -1,7 +1,7 @@
 .version.steel_steam__icon /* version checker */
 {
-	color: #0000F9;
-	background-color: #ABD756;
+	color: #000019;
+	background-color: #A48C9A;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
