--- a/css/war-pigs--poster.css
+++ b/css/war-pigs--poster.css
@@ -1,7 +1,7 @@
 .version.war_pigs__poster /* version checker */
 {
-	color: #000005;
-	background-color: #65AA5F;
+	color: #0000E2;
+	background-color: #601400;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
