--- a/css/zabit--magazine.css
+++ b/css/zabit--magazine.css
@@ -1,7 +1,7 @@
 .version.zabit__magazine /* version checker */
 {
-	color: #0000EC;
-	background-color: #18BC1B;
+	color: #00000B;
+	background-color: #1D0244;
 }
 
 .html
@@ -115,10 +115,10 @@
 	width: 630px;
 	min-height: 36px;
 	background-color: transparent;
-	line-height: 41px;
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 34px;
+	line-height: 41px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 500;
 	position: relative;
