--- a/css/bahar-_enlikleri--poster.css
+++ b/css/bahar-_enlikleri--poster.css
@@ -1,7 +1,7 @@
 .version.bahar__enlikleri__poster /* version checker */
 {
-	color: #0000E1;
-	background-color: #7268EA;
+	color: #000018;
+	background-color: #D12C39;
 }
 
 .html
@@ -23,7 +23,7 @@
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-bottom: 292px;
+	padding-bottom: 98px;
 	margin-left: auto;
 	margin-right: auto;
 }
