--- a/css/smaug--typography.css
+++ b/css/smaug--typography.css
@@ -1,7 +1,7 @@
 .version.smaug__typography /* version checker */
 {
-	color: #0000E7;
-	background-color: #B79C65;
+	color: #0000EC;
+	background-color: #096B8B;
 }
 
 .html
@@ -18,7 +18,7 @@
 {
 	z-index: 1;
 	width: 950px;
-	min-height: 2279.7712890625px;
+	min-height: 2233.7712890625px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
@@ -31,7 +31,7 @@
 #page_position_content
 {
 	padding-top: 7px;
-	padding-bottom: 143px;
+	padding-bottom: 97px;
 	width: 0.01px;
 }
 
@@ -150,7 +150,7 @@
 	margin-right: -10000px;
 	margin-top: 24px;
 	left: 1119px;
-	background: transparent url("../images/12.png") no-repeat center center;
+	background: transparent url("../images/1.png") no-repeat center center;
 	background-size: contain;
 }
 
@@ -160,7 +160,7 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 24px -10000px 0px 0px;
-	background: transparent url("../images/22.png") no-repeat center center;
+	background: transparent url("../images/2.png") no-repeat center center;
 	background-size: contain;
 }
 
@@ -170,7 +170,7 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 24px -10000px 0px 0px;
-	background: transparent url("../images/32.png") no-repeat center center;
+	background: transparent url("../images/3.png") no-repeat center center;
 	background-size: contain;
 }
 
@@ -180,23 +180,23 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 24px -10000px 0px 0px;
-	background: transparent url("../images/12.png") no-repeat center center;
+	background: transparent url("../images/1.png") no-repeat center center;
 	background-size: contain;
 }
 
 .hidpi #buttonu3369:hover
 {
-	background-image: url("../images/2_2x2.png");
+	background-image: url("../images/2_2x.png");
 }
 
 .hidpi #buttonu3369:active
 {
-	background-image: url("../images/3_2x2.png");
+	background-image: url("../images/3_2x.png");
 }
 
 .hidpi #buttonu3369,.hidpi #buttonu3369.ButtonSelected
 {
-	background-image: url("../images/1_2x2.png");
+	background-image: url("../images/1_2x.png");
 }
 
 #pu3377
