--- a/css/read-this--poster.css
+++ b/css/read-this--poster.css
@@ -1,7 +1,7 @@
 .version.read_this__poster /* version checker */
 {
-	color: #00001C;
-	background-color: #C95CEF;
+	color: #0000E1;
+	background-color: #6E3722;
 }
 
 .html
@@ -23,7 +23,7 @@
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-bottom: 88px;
+	padding-bottom: 95px;
 	margin-left: auto;
 	margin-right: auto;
 }
