--- a/css/war-pigs--poster.css
+++ b/css/war-pigs--poster.css
@@ -1,7 +1,7 @@
 .version.war_pigs__poster /* version checker */
 {
-	color: #0000E2;
-	background-color: #601400;
+	color: #000013;
+	background-color: #5863E7;
 }
 
 .html
@@ -23,7 +23,7 @@
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-bottom: 88px;
+	padding-bottom: 97px;
 	margin-left: auto;
 	margin-right: auto;
 }
