--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000F4;
-	background-color: #593591;
+	color: #0000E9;
+	background-color: #0C6CCD;
 }
 
 .html
@@ -18,7 +18,7 @@
 {
 	z-index: 1;
 	width: 950px;
-	min-height: 2864px;
+	min-height: 3236px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
@@ -29,7 +29,7 @@
 
 #page_position_content
 {
-	padding-bottom: 116px;
+	padding-bottom: 328px;
 	width: 0.01px;
 }
 
@@ -48,7 +48,7 @@
 
 #u796
 {
-	z-index: 35;
+	z-index: 36;
 	width: 100px;
 	min-height: 100px;
 	border-style: none;
@@ -62,6 +62,7 @@
 #ppu732
 {
 	width: 0.01px;
+	padding-bottom: 0px;
 	margin-right: -10000px;
 	margin-left: 209px;
 }
@@ -74,7 +75,7 @@
 
 #u732
 {
-	z-index: 36;
+	z-index: 37;
 	width: 90px;
 	background-color: transparent;
 	position: relative;
@@ -82,10 +83,10 @@
 	margin-top: 33px;
 }
 
-#buttonu1717
+#buttonu3873
 {
-	z-index: 34;
-	width: 310px;
+	z-index: 33;
+	width: 470px;
 	height: 150px;
 	-pie-box-shadow: 0px 8px 8px #E5E5E5;
 	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
@@ -94,6 +95,44 @@
 	position: relative;
 	margin-right: -10000px;
 	left: 130px;
+	background: #C58516 url("../images/tie_1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#buttonu3873:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 470px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #B57A16 url("../images/tie_2.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+.hidpi #buttonu3873
+{
+	background-image: url("../images/tie_1_2x.jpg");
+}
+
+.hidpi #buttonu3873:hover
+{
+	background-image: url("../images/tie_2_2x.jpg");
+}
+
+#buttonu1717
+{
+	z-index: 35;
+	width: 310px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	left: 610px;
 	background: #412863 url("../images/slack_1-iebuttonu1717-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/slack_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -114,6 +153,37 @@
 	background-size: cover;
 }
 
+#buttonu1608
+{
+	z-index: 34;
+	width: 310px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	background: #412863 url("../images/follow2-iebuttonu1608-fr.png") no-repeat center center;
+	background: rgba(0,0,0,0) url("../images/follow2.gif") no-repeat center center;
+	background-color: #412863;
+	background-size: cover;
+}
+
+#buttonu1608:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 310px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #680CD1 url("../images/follow-iebuttonu1608-r-fr.png") no-repeat center center;
+	background: rgba(0,0,0,0) url("../images/follow.jpg") no-repeat center center;
+	background-color: #680CD1;
+	background-size: cover;
+}
+
 #buttonu1895
 {
 	z-index: 32;
@@ -123,8 +193,9 @@
 	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
 	border-color: #787878;
 	border-radius: 10px;
-	margin-top: 10px;
 	position: relative;
+	margin-right: -10000px;
+	left: 320px;
 	background: #424144 url("../images/love_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -136,7 +207,7 @@
 	width: 470px;
 	height: 150px;
 	min-height: 0px;
-	margin: 10px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #3A3A3A url("../images/love_2.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -151,43 +222,6 @@
 	background-image: url("../images/love_2_2x.jpg");
 }
 
-#pbuttonu1608
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-left: 689px;
-}
-
-#buttonu1608
-{
-	z-index: 33;
-	width: 310px;
-	height: 150px;
-	-pie-box-shadow: 0px 8px 8px #E5E5E5;
-	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
-	border-color: #787878;
-	border-radius: 10px;
-	position: relative;
-	background: #412863 url("../images/follow2-iebuttonu1608-fr.png") no-repeat center center;
-	background: rgba(0,0,0,0) url("../images/follow2.gif") no-repeat center center;
-	background-color: #412863;
-	background-size: cover;
-}
-
-#buttonu1608:hover
-{
-	-pie-box-shadow: 0px 20px 30px #8C8C8C;
-	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
-	width: 310px;
-	height: 150px;
-	min-height: 0px;
-	margin: 0px;
-	background: #680CD1 url("../images/follow-iebuttonu1608-r-fr.png") no-repeat center center;
-	background: rgba(0,0,0,0) url("../images/follow.jpg") no-repeat center center;
-	background-color: #680CD1;
-	background-size: cover;
-}
-
 #buttonu1806
 {
 	z-index: 31;
@@ -197,8 +231,8 @@
 	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
 	border-color: #787878;
 	border-radius: 10px;
-	margin-top: 10px;
 	position: relative;
+	margin-right: -10000px;
 	background: #7B746A url("../images/awake_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -210,7 +244,7 @@
 	width: 470px;
 	height: 150px;
 	min-height: 0px;
-	margin: 10px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #7A756A url("../images/awake_2.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -236,6 +270,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #412863 url("../images/eki_1-iebuttonu1462-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/eki_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -267,7 +302,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #8152A1 url("../images/pray_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -305,6 +339,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #9E43A8 url("../images/sins_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -342,7 +377,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 480px;
 	background: #FFCD08 url("../images/bul_1-iebuttonu2056-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/bul_1.jpg") no-repeat center center;
 	background-color: #FFCD08;
@@ -374,6 +408,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 320px;
 	background: #373034 url("../images/phamsa_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -411,7 +446,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 480px;
 	background: #B09076 url("../images/avenge_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -449,6 +483,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #131413 url("../images/smaug_1-iebuttonu1971-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/smaug_1.jpg") no-repeat center center;
 	background-color: #131413;
@@ -480,7 +515,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #F0F0EE url("../images/zabit2_1-iebuttonu2135-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/zabit2_1.jpg") no-repeat center center;
 	background-color: #F0F0EE;
@@ -512,8 +546,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1px;
-	left: 640px;
+	left: 320px;
 	background: #BDC8CD url("../images/annual_1-iebuttonu2082-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/annual_1.jpg") no-repeat center center;
 	background-color: #BDC8CD;
@@ -527,7 +560,7 @@
 	width: 310px;
 	height: 150px;
 	min-height: 0px;
-	margin: 1px -10000px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #BDC8CD url("../images/annual_2-iebuttonu2082-r-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/annual_2.jpg") no-repeat center center;
 	background-color: #BDC8CD;
@@ -1072,7 +1105,7 @@
 	background-image: url("../images/quor_2_2x.jpg");
 }
 
-#pbuttonu1462,#pbuttonu1881,#pbuttonu1779,#pbuttonu1971,#pbuttonu1792,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
+#pbuttonu1608,#pbuttonu1806,#pbuttonu1848,#pbuttonu2056,#pbuttonu1765,#pbuttonu2135,#pbuttonu1792,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
 {
 	width: 0.01px;
 	margin-top: 10px;
@@ -1230,7 +1263,7 @@
 
 #buttonu3776
 {
-	z-index: 38;
+	z-index: 39;
 	width: 58px;
 	height: 58px;
 	border-color: #787878;
@@ -1301,7 +1334,7 @@
 
 #u3804-4
 {
-	z-index: 40;
+	z-index: 41;
 	width: 630px;
 	min-height: 31px;
 	background-color: transparent;
